# cs-config-manager

./: Cargo.toml
.github/workflows/: check.yml  test.yml
src/: compile.rs  main.rs  pull.rs  push.rs
