[package]
name = "cs-config-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive", "cargo"] }
regex = "1.11.1"
octocrab = "0.43.0"
tokio = { version = "1.44.1", features = ["full"] }
futures = "0.3.31"
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-subscriber = "0.3.19"
